# spoty_on_gtk

./: .settings.conf  Cargo.toml  build.rs
rs/: Cargo.toml  README.md
rs/src/: main.rs
rs/src/gui/: mod.rs
rs/src/handlers/: mod.rs
rs/src/svelte/: mod.rs
rs/src/templates/: mod.rs
src/: gui.rs  main.rs
src/auth/: mod.rs
src/debug/: mod.rs
src/gui/: login_window.rs  main_window.rs  mod.rs
src/handlers/: mod.rs
src/spotify/: albums.rs  auth.rs  mod.rs  primary_recommendations.rs  recently_played.rs  top_tracks.rs
src/template_engine/: mod.rs
src/templates/: mod.rs
src/utils/: config.rs  mod.rs  query_builder.rs  settings.rs
svelte/: package.json  pnpm-lock.yaml  svelte.config.js
svelte/src/routes/error/: +page.svelte
svelte/src/routes/no-code/: +page.svelte
svelte/src/routes/success/: +page.svelte
svelte/src/routes/token-error/: +page.svelte
templates/: message.html
ui/: app.slint
