[package]
name = "Spoty"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
gtk4 = "0.9.6"
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
urlencoding = "2.1"
open = "5.0"
dirs = "6.0.0"
glib = "0.20.10"
toml = "0.8.23"
curl = "0.4.48"
